# BayesPanel

./: LICENSE  NAMESPACE  configure  configure.ac
R/: BayesPanel.R  check.R  zzz.R
inst/: CITATION
man/: BayesPanel.Rd
src/: bayespanel.c  bayespanel_update.c  bayespanel_update.h  randist_mv.c  randist_mv.h
